<resources>
    <string name="app_name">QuizQuest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_quizquest">Welcome to QuizQuest!</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="go_to_login">Go To Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="Email">Email</string>
    <string name="name">Name</string>
    <string name="welcome_to_quizquest1">Welcome To QuizQuest!</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="your_statistics">Your Statistics:</string>
    <string name="score_85">Score: 85</string>
    <string name="performance_excellent">Performance: Excellent</string>
    <string name="logout">Logout</string>
    <string name="user_profile">User Profile</string>
    <string name="select_a_quiz_category">Select a Quiz Category:</string>
    <string name="quizquest_logo_description">Description of QuizQuest Logo</string>
    <string name="apply_filter">Apply Filter</string>
    <string-array name="filter_options">
        <item>Top Performers</item>
        <item>Top Category Performance</item>
        <!--        <item>User Performance</item>-->
    </string-array>
    <string name="enter_username">Enter Username</string>
    <string name="add_new_question">Add New Question</string>
    <string name="set_questions">Set Questions</string>
    <string name="answers">Answers</string>
    <string name="question">Question</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="go_to_admin_dashboard">Go to Admin Dashboard</string>
    <string name="set_qanda">Set Questions</string>
    <string name="empty">Empty</string>
    <string name="Empty" />
</resources>